--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,8 +1,8 @@
 fixtures:
     forge_modules:
         apt: 'puppetlabs/apt'
+        powershell: 'joshcooper/powershell'
         registry: 'puppetlabs/registry'
         stdlib: 'puppetlabs/stdlib'
-        stdlib: 'joshcooper/powershell'
     symlinks:
       stackdriver: "#{source_dir}"
