--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 ---
 language: ruby
 sudo: false
-cache: bundler
+cache:
+  bundler: true
+  directories:
+    - $HOME/spec/fixtures/modules
 bundler_args: --without development system_tests
 before_install: rm Gemfile.lock || true
 script: "bundle exec rake spec"
