--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,6 +3,8 @@ fixtures:
         apt: 'puppetlabs/apt'
         powershell: 'joshcooper/powershell'
         registry: 'puppetlabs/registry'
-        stdlib: 'puppetlabs/stdlib'
+        stdlib:
+            repo: 'puppetlabs/stdlib'
+            ref: '4.12.0'
     symlinks:
       stackdriver: "#{source_dir}"
